# npuzzle42

./: Dockerfile  GPL-LICENSE.md  README.md  dune-project  npuzzle.opam  out.txt
.github/workflows/: build.yml  deploy.yml
doc/: index.html
puzzles/: 2by2.txt  3by3.txt  3by3snd.txt  4by4.txt  4by4ez.txt  5by5.txt
src/: ast.ml  astar.ml  dune  generate.ml  heuristics.ml  immut_array.ml  immut_array.mli  lexer.mll  main.ml  npuzzle.ml  parray.ml  parser.mly  pp.ml  types.ml  utils.ml
test/: dune  test_npuzzle.ml
